# AppliedPythonHW01

./: README.md  TimeSeries_analysis.ipynb  pyproject.toml  temperature_data.csv  Копия_блокнота__ИИ_ДЗ_1_(ОБЯЗАТЕЛЬНОЕ)_ipynb_.ipynb
app/: app.py
app/modules/: data_load_process.py  requests_worker.py
modules/: Anomalies_process.py  data_load_process.py  requests_worker.py
